--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,9 +22,9 @@ layout: layout
       </a>
 
       <p>
-        I'm a developer at GitHub. <a href="https://twitter.com/{{ site.twitter }}" target="_blank">Follow me on Twitter</a>;
-        you'll enjoy my tweets. I take care to carefully craft each one. Or at least aim to make
-        you giggle. Or offended. One of those two&mdash; I haven't decided which yet.
+       I'm currently a postdoctoral researcher at UC Berkeley where I work with Chris McKee and Richard Klein. My research
+        revolves around using radiation-magnetic-hydrodynamical simulations to better understand the 
+        dynamic process by which stars form out of the interstellar medium. 
       </p>
 
       <a href="http://twitter.com/share" class="twitter-share-button" data-count="none" data-via="{{ site.twitter }}">Tweet</a>
