--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,6 +19,8 @@
   <section class="sections">
     <ul>
       <li><a href="/about.html">about</a></li>
+      <li><a href="/">papers</a></li>
+      <li><a href="/">cv</a></li>
       <li><a href="/">posts</a></li>
     </ul>
   </section>
