Updating cv on sidebar.

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,7 +20,7 @@
     <ul>
       <li><a href="/about.html">about</a></li>
       <li><a href="/">papers</a></li>
-      <li><a href="/">cv</a></li>
+      <li><a href="/safranek_cd.pdf">cv</a></li>
       <li><a href="/">posts</a></li>
     </ul>
   </section>
