--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,8 +19,8 @@
   <section class="sections">
     <ul>
       <li><a href="/about.html">about</a></li>
-      <li><a href="/">papers</a></li>
-      <li><a href="/safranek_cv.pdf">cv</a></li>
+      <li><a href="/papers.html">papers</a></li>
+      <li><a href="/safranek_cv_v1.pdf">cv</a></li>
       <li><a href="/">posts</a></li>
     </ul>
   </section>
