--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
       <li><a href="/about.html">about</a></li>
       <li><a href="/papers.html">papers</a></li>
       <li><a href="/safranek_cv_v1.pdf">cv</a></li>
-      <li><a href="/">posts</a></li>
+      <li><a href="/posts.html">posts</a></li>
     </ul>
   </section>
 </section>
