--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,14 +12,13 @@
 
   <section class="meta">
     <a href="{{ site.github.owner_url }}" target="_blank" title="Follow me on GitHub" aria-label="Follow me on GitHub"><i class="fa fa-github"></i></a>
-    <a href="https://twitter.com/{{ site.twitter }}" target="_blank" title="Follow me on Twitter" aria-label="Follow me on Twitter"><i class="fa fa-twitter"></i></a>
-    <a href="/atom.xml" title="Atom RSS feed" aria-label="Atom RSS feed"><i class="fa fa-rss"></i></a>
   </section>
 
   <section class="sections">
     <ul>
       <li><a href="/about.html">about</a></li>
       <li><a href="/papers.html">papers</a></li>
+      <li><a href="/contact.html">contact</a></li>
       <li><a href="/safranek_cv_v1.pdf">cv</a></li>
       <li><a href="/posts.html">posts</a></li>
     </ul>
