--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -19,7 +19,7 @@
       <li><a href="/about.html">about</a></li>
       <li><a href="/papers.html">papers</a></li>
       <li><a href="/contact.html">contact</a></li>
-      <li><a href="/safranek_cv_v1.pdf">cv</a></li>
+      <li><a href="/css_resume.pdf">resume</a></li>
       <li><a href="/posts.html">posts</a></li>
     </ul>
   </section>
